tests/baselines/reference/getAndSetNotIdenticalType2.errors.txt
tests/cases/compiler/getAndSetNotIdenticalType2.ts(5,9): error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
tests/cases/compiler/getAndSetNotIdenticalType2.ts(5,9): error TS2380: 'get' and 'set' accessor must have the same type 'A<string>', but this 'get' accessor has the type 'A<T>'.
tests/cases/compiler/getAndSetNotIdenticalType2.ts(8,9): error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
tests/cases/compiler/getAndSetNotIdenticalType2.ts(8,9): error TS2380: 'get' and 'set' accessor must have the same type 'A<T>', but this 'get' accessor has the type 'A<string>'.
tests/cases/compiler/getAndSetNotIdenticalType2.ts(9,9): error TS2322: Type 'A<string>' is not assignable to type 'A<T>'.
  Type 'string' is not assignable to type 'T'.


==== tests/cases/compiler/getAndSetNotIdenticalType2.ts (5 errors) ====
    class A<T> { foo: T; }
    
    class C<T> {
        data: A<T>;
        get x(): A<T> {
            ~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
            ~
!!! error TS2380: 'get' and 'set' accessor must have the same type 'A<string>', but this 'get' accessor has the type 'A<T>'.
!!! related TS2730 tests/cases/compiler/getAndSetNotIdenticalType2.ts:5:9: The respective 'set' accessor has the type 'A<string>'.
            return this.data;
        }
        set x(v: A<string>) {
            ~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
            ~
!!! error TS2380: 'get' and 'set' accessor must have the same type 'A<T>', but this 'get' accessor has the type 'A<string>'.
!!! related TS2730 tests/cases/compiler/getAndSetNotIdenticalType2.ts:8:9: The respective 'set' accessor has the type 'A<T>'.
            this.data = v;
            ~~~~~~~~~
!!! error TS2322: Type 'A<string>' is not assignable to type 'A<T>'.
!!! error TS2322:   Type 'string' is not assignable to type 'T'.
        }
    }
    
    var x = new C();
    var r = x.x;
    x.x = r;